@@ -70,7 +70,7 @@ public class LoginDialog extends AbstractLoginDialog implements MouseInputListen
 
 	public static int buttonComboGap = 4;
 
-	public static final Integer BACKGROUND_LAYER = new Integer(-60000);
+	public static final Integer BACKGROUND_LAYER = Integer.valueOf(-60000);
 
 	protected BackgroundPanel background = null;
 
