@@ -117,7 +117,7 @@ public class Oracle12cSQLStatementHandler extends DefaultSQLStatementHandler {
             Map hColumnTypesAux = new HashMap();
             if (hColumnTypesAux != null) {
                 for (int i = 0; i < columnTypes.length; i++) {
-                    hColumnTypesAux.put(sColumnNames[i], new Integer(columnTypes[i]));
+                    hColumnTypesAux.put(sColumnNames[i], Integer.valueOf(columnTypes[i]));
                 }
             }
             entityResult.setColumnSQLTypes(hColumnTypesAux);
